--- a/src/App.css
+++ b/src/App.css
@@ -209,6 +209,11 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   margin-bottom: 20px;
   display: block;
 }
+@media (max-width: 600px) {
+  .banner h1 {
+    font-size: 50px;
+  }
+}
 .banner p {
   color: #B8B8B8;
   font-size: 18px;
