--- a/src/App.css
+++ b/src/App.css
@@ -727,6 +727,25 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     height: 300px;
   }
 }
+@media (max-width: 450px) {
+  .footer .goodbye-astronaut {
+    position: absolute;
+    scale: 0.35;
+    top: -70%;
+    right: -60%;
+  }
+  .footer .goodbye-message {
+    top: -55%;
+    right: -85%;
+    object-fit: contain;
+    scale: 0.3;
+  }
+  .footer .footer-goodbye-img {
+    width: 60%;
+    margin: auto;
+    height: 300px;
+  }
+}
 
 .App {
   text-align: center;
