--- a/src/App.css
+++ b/src/App.css
@@ -204,7 +204,11 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 @media (max-width: 600px) {
   .banner {
     height: 1250px;
-
+  }
+}
+@media (max-width: 510px) {
+  .banner {
+    background-image: url('./assets/img/banner-bg-animated-mobile.gif');
   }
 }
 .banner h1 {
