--- a/src/App.css
+++ b/src/App.css
@@ -196,10 +196,19 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .banner {
   margin-top: 0;
   padding: 260px 0 100px 0;
-  background-image: url('./assets/img/bg-animated.gif');
-  background-position: top center;
-  background-size: cover;
-  background-repeat: no-repeat;
+  /* background-image: url('./assets/img/bg-animated.gif'); */
+  /* background-position: top center; */
+  /* background-size: cover; */
+  /* background-repeat: no-repeat; */
+}
+#banner-vid {
+  object-fit: cover;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
 }
 @media (max-width: 600px) {
   .banner {
