--- a/src/App.css
+++ b/src/App.css
@@ -214,6 +214,9 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   .banner {
     height: 1250px;
   }
+  #banner-vid {
+    position: absolute;
+  }
 }
 @media (max-width: 510px) {
   /* .banner {
