--- a/src/App.css
+++ b/src/App.css
@@ -992,31 +992,34 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 150%;
     background-color: black !important;
     z-index: 1000;
   }
   .loadingScreen img {
     position: absolute;
     left: 50%;
-    top: 35%;
-    transform: translateX(-30%);
-    scale: 2;
+    top: 25%;
+    transform: translateX(-40%);
+    scale: 1.5;
     animation: loadingAnimation 3s ease-in-out infinite;
   }
   .loadingScreen p {
     position: absolute;
     left: 50%;
-    top: 55%;
+    top: 45%;
     width: 100%;
     text-align: center;
+  }
+  .removeLoadingScreen {
+    height: 150%;
   }
   .removeLoadingScreen img {
     position: absolute;
     left: 50%;
-    top: 35%;
-    transform: translateX(-30%);
-    scale: 2;
+    top: 25%;
+    transform: translateX(-40%);
+    scale: 1.5;
     width: 11%;
     animation: bounceFade 1s ease-in-out forwards;
   }
@@ -1024,7 +1027,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   .removeLoadingScreen p {
     position: absolute;
     left: 50%;
-    top: 55%;
+    top: 45%;
     width: 100%;
     text-align: center;
     animation: removeLoadingText 0.2s ease-in-out forwards;
