--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 /* Custom fonts */
 @font-face {
-  font-family: Centra;
   src: url(./assets/fonts/CentraNo2-Bold.ttf);
+  font-family: Centra;
   font-weight: 700;
 }
 @font-face {
@@ -388,7 +388,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   position: absolute;
   bottom: 0;
   width: 40%;
-  z-index: -1;
+  z-index: -5;
   left: 0;
 }
 
@@ -413,6 +413,12 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   text-align: center;
   width: 56%;
 }
+
+.project #pills-tab {
+  position: relative;
+  z-index: 2;
+}
+
 .project .nav.nav-pills {
   width: 72%;
   margin: 0 auto;
@@ -422,7 +428,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .project .nav.nav-pills .nav-item {
   width: 33.33333%;
-  z-index: 10;
+  /* z-index: 2; */
 }
 .project .nav.nav-pills .nav-link {
   background-color: transparent;
